# auto_quant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: settings.yaml
config/optimize/: macd.yaml
docs/: wechat-策略研究流水线.md
research/templates/: idea.md  meta.yaml
scripts/: analyze_jq_report.py  build_ablation_variants.py  jq_research_export_metrics.py  research.py  run_backtest.py  run_jq_batch.py  run_jq_single.py  run_optimize.py  scrape_period_runs.py  scrape_regime_runs.py  show_jq_results.py
src/auto_quant/: __init__.py  cli.py  config.py
src/auto_quant/data/: __init__.py  akshare_loader.py
src/auto_quant/engine/: __init__.py  backtest_runner.py  metrics.py
src/auto_quant/joinquant/: __init__.py  ablation_resume.py  concurrency.py  converter.py  editor_inject.py  links_store.py  playwright_runner.py  queue.py  report_analysis_tools.py  report_metrics.py  report_pack_fetch.py  report_pack_io.py  report_scrape.py  report_status.py  scraper.py  single.py  strategy_flow.py  ui_helpers.py
src/auto_quant/optimizer/: __init__.py  guards.py  loop.py
src/auto_quant/reports/: __init__.py  html_report.py
src/auto_quant/research/: __init__.py  ablation.py  ai_brief.py  pipeline.py  registry.py
src/auto_quant/strategies/: __init__.py  macd_divergence.py  trade_simulator.py
